矫正初始化时机